manuscript v1.3 (methods complete)

--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Introduction
 
-Much of our knowledge on habitat selection in free-ranging animals is restricted to the breeding season. At different scales, animals assess a wide variety of aspects and features of the environment and make a series of hierarchical choices, culminating in an affinity and preference for certain habitats over others, which is termed habitat selection *(Johnson, 1980; Cody, 1985)*. Studies on habitat selection are interested in the ways in which these preferences vary across species, space, time, etc. Broad-scale selection is reflected in species’ geographic ranges and in the landscape features surrounding home ranges, while fine-scale selection is reflected in microhabitats used for foraging, reproduction, and shelter (Johnson, 1980; Saab, 1999). However, the breeding season---encompassing both the actual reproductive period, as well as the period leading up to mating---dominates a large majority of these questions (e.g., Danchin et al., 1998; Kleist et al., 2017; Bosco et al., 2021). Moreover, most such studies target migratory species, whether it be in their breeding grounds (e.g., Danchin et al., 1998; Kleist et al., 2017; Bosco et al., 2021), wintering grounds (usually in the tropics; e.g., Strasser et al., 2019; Ruiz-Sanchez et al., 2017; Albert et al., 2020) or stopover sites (e.g., Papageorgiou et al., 2017; Wolfe et al., 2014; Alonso et al., 2020; Cohen et al., 2021). 
+Much of our knowledge on habitat selection in free-ranging animals is restricted to the breeding season. At different scales, animals assess a wide variety of aspects and features of the environment and make a series of hierarchical choices, culminating in an affinity and preference for certain habitats over others, which is termed habitat selection *(Johnson, 1980; Cody, 1985)*. Studies on habitat selection are interested in the ways in which these preferences vary across species, space, time, etc. Broad-scale selection is reflected in species’ geographic ranges and in the landscape features surrounding home ranges, while fine-scale selection is reflected in microhabitats used for foraging, reproduction, and shelter (Fretwell & Lucas, 1969; Johnson, 1980; Saab, 1999). However, the breeding season---encompassing both the actual reproductive period, as well as the period leading up to mating---dominates a large majority of these questions (e.g., Danchin et al., 1998; Kleist et al., 2017; Bosco et al., 2021). Moreover, most such studies target migratory species, whether it be in their breeding grounds (e.g., Danchin et al., 1998; Kleist et al., 2017; Bosco et al., 2021), wintering grounds (usually in the tropics; e.g., Strasser et al., 2019; Ruiz-Sanchez et al., 2017; Albert et al., 2020) or stopover sites (e.g., Papageorgiou et al., 2017; Wolfe et al., 2014; Alonso et al., 2020; Cohen et al., 2021). 
 
 This disproportionate attention is not unjustified: habitats chosen by animals can influence fitness outcomes via costs (e.g., predation risk) and benefits (e.g., food availability) of habitat use, and these have traditionally been strongly linked with reproductive success and offspring survival. In migrants, habitat requirements are complex and vary through the annual cycle, across their geographic range, along migratory routes, and at multiple spatial scales. Therefore, investigating their selection patterns may reveal a lot about the links between organisms and habitat and landscape features. Nevertheless, habitat dynamics during transitional extra-breeding periods can be of great importance as well, given their associated high stress and consequence as an important link in the chain. In the context of temperate birds, questions regarding habitat selection, niche breadth and community structure take on new dimensions in these periods. For one, the birds are less territorial and more mobile, allowing greater freedom in choosing foraging areas (Uesugi and Murakami, 2007). Additionally, motivations for habitat selection are straightforward and unambiguous; the main challenges are food scarcity coupled with increased food requirements, and the consequently higher predation risk---both for migrants that need to build up enough nutritional reserves and for residents that need to prepare for the oncoming winter. Parent-dependent fledgelings also transition to independent young birds that have to overcome challenges brought by the changing season and by their lack of experience in foraging, navigating and avoiding predators (Anders et al., 1997). Especially to them but also to adults, dense vegetation may provide cover and protection from adverse weather and predators. Dispersing juveniles may even collect social information regarding future site quality during the post-breeding period (Betts et al., 2008a). Despite slowly growing evidence that habitat selection in birds may differ seasonally due to the varying ecological requirements during the different seasons (Rivera et al., 1998; King et al., 2006; Akresh et al., 2009; Vitz and Rodewald, 2011; Dittmar et al., 2014), this period remains understudied. 
 
@@ -29,62 +29,41 @@ Further, under these various ecological pressures, competitive interactions may 
 
 These various strategies and interactions are usually linked with habitat characteristics such as canopy cover, heterogeneity, tree density and species richness (Vitz and Rodewald, 2007). Such characteristics are commonly compared with bird abundances or densities to analyse habitat selection. Berg (1997) found that bird abundances correlated positively with the presence of deciduous trees and with tree diameter, while among conifers the Norway spruce *Picea abies* was preferred over the pine *Pinus sylvestris*. Spatial segregation of habitats at a relatively fine-grained scale is suggested to allow for the co-occurrence of more species. However, in addition to hosting a low diversity of fruiting plant species, Central European forests are also less spatially heterogenous. Most modern-day forests in Central Europe have been restructured towards commercially exploited plantations dominated by spruce that form compact growths with a closed above-tree layer at maturity (Fanta, 2007). On the other hand, intense management and disturbance regimes bring in heterogeneity, but do not facilitate biodiversity for obvious reasons. In these circumstances, studies on habitat selection can provide crucial information that can better advise conservation action in the ever-globalising world. 
 
-In this study, we investigate patterns of habitat selection exhibited by temperate forest bird communities in the post-breeding period at a fine-grained temporal resolution. The main objectives are to identify the habitat features that are tracked most prominently in this period of high stress (i.e., the autumn-winter transition), to assess the patterns and magnitude of habitat selection as well as their possible temporal dynamism with the seasonal transition, and to explore the possibilities of ecological interactions and strategies. 
-
+In this study, we investigated patterns of habitat selection exhibited by temperate forest bird communities in the post-breeding period at a fine-grained temporal (weeks) and spatial (patches) resolution. The main objectives were to identify the habitat features that are tracked most prominently in this period of high stress (i.e., the autumn-winter transition), to assess the patterns and magnitude of habitat selection as well as their possible temporal dynamism with the seasonal transition, and to explore the possibilities of ecological interactions and strategies. 
 
 # Methodology
 
+## Study site
 
+The study was conducted over the course of three months (13 weeks), from the first week of July 2020 to the first week of October 2020, in a typical structurally manipulated and commercially exploited patch of Central European temperate forest (*Branisovsky les*) in České Budějovice, Czech Republic. The forest is located on the western edge of the city (48°58'55.672"N, 14°25'22.907"E), and represents a semi-urban forest stretch of around 800 ha segregated from neighbouring forests by extensive farmland, large fishponds and settlements. Situated at an altitude of approximately 400 m asl, it is technically a mixed forest, but is very patchy owing to the long history of forestry regimes as well as its connection with rural and military Czech history. The patches range from pure spruce plantations to mixed stands dominated by oak. As such, the tree community consists mostly of conifers like Norway spruce *Picea abies*, Scots pine *Pinus sylvestris*, European larch *Larix decidua* and silver fir *Abies alba*, and broad-leaved species such as pedunculate/European oak *Quercus robur*, sessile/Cornish oak *Q. petraea*, northern red oak *Q. rubra*, silver birch *Betula pendula*, quaking/Eurasian aspen *Populus tremula*, common/European beech *Fagus sylvatica*, rowan or European mountain ash *Sorbus aucuparia*, small-leaved lime or littleleaf linden *Tilia cordata*, common/European black alder *Alnus glutinosa*, Norway maple *Acer platanoides* and sycamore maple *A. pseudoplatanus*. The commonly found shrub species are alder buckthorn *Frangula alnus*, rowan *Sorbus aucuparia* and black/European elderberry *Sambucus nigra*, while ground layer vegetation is restricted to graminoids like sedges *Carex* spp. (mostly *C. brizoides*), bramble *Rubus* sp. and European blueberry *Vaccinium myrtillus*.
 
-Multiple smaller patches of varying vegetational characteristics were chosen within a single larger stretch of forest, and bird abundances were studied starting from late summer until early autumn, covering the post-breeding season at a . 
-
-## Study area
-
-The study was conducted over the course of three months (13 weeks), from the first week of July 2020 to the first week of October 2020, in a typical structurally manipulated and commercially exploited patch of Central European temperate forest in České Budějovice, Czech Republic. The forest is located on the western edge of the city, and represents a semi-urban forest stretch of around 800 ha segregated from neighbouring forests by extensive farmland, large fishponds and settlements. Situated at an altitude of approximately 400 m asl, it is technically a mixed forest, but is highly heterogeneous owing to the long history of forestry regimes as well as its connection with rural and military Czech history, and ranges from pure spruce plantations to mixed stands dominated by oak. 
-
-As such, the major tree species include conifers like Norway spruce *Picea abies*, Scots pine *Pinus sylvestris*, European larch *Larix decidua* and silver fir *Abies alba*, and broad-leaved species such as pedunculate/European oak *Quercus robur*, sessile/Cornish oak *Q. petraea*, northern red oak *Q. rubra*, silver birch *Betula pendula*, quaking/Eurasian aspen *Populus tremula*, common/European beech *Fagus sylvatica*, rowan or European mountain ash *Sorbus aucuparia*, small-leaved lime or littleleaf linden *Tilia cordata*, common/European black alder *Alnus glutinosa*, Norway maple *Acer platanoides* and sycamore maple *A. pseudoplatanus*. The commonly found shrub species are alder buckthorn *Frangula alnus*, rowan *Sorbus aucuparia* and black/European elderberry *Sambucus nigra*, while ground layer vegetation is restricted to graminoids like sedges *Carex* spp. (mostly *C. brizoides*), bramble *Rubus* sp. and European blueberry *Vaccinium myrtillus*.
-
-The entire forest stretch---with the exception of some parts either too disturbed or having restricted access---was effectively covered by selecting 32 non-random, evenly distributed circular sampling points of 30 m radius (Figure 1). The total forest area under consideration was thus around 400 ha, while the absolute cumulative area covered by my sampling points was approximately 9 ha, as they were chosen such that each point was at least 250 m away from its neighbours (although this boundary was lowered to 200 m in three cases). Clear cuts were avoided as much as possible. Care was taken to ensure that the selected set of points represented sufficiently well the natural range and diversity of habitat characteristics in the forest.
-
+The entire forest stretch---with the exception of some parts either too disturbed or having restricted access---was effectively covered by selecting 32 non-random, evenly distributed circular sampling points of 30 m radius (Figure 1). The total forest area under consideration was thus around 400 ha, while the absolute cumulative area covered by the sampling points was approximately 9 ha, as they were chosen such that each point was at least 250 m away from its neighbours (although this was lowered to 200 m in three cases). Clear cuts were avoided as much as possible. We ensured that the selected set of points represented sufficiently well the natural range and diversity of habitat characteristics in the forest.
  
 ![Map showing 32 sampling points evenly distributed over the study area: Branišovský les, Czech Republic.](map_studyarea.png)
 
-## Vegetation surveys
+## Habitat surveys
 
-Vegetation features thought to be relevant to birds in the post-breeding period were chosen in order to characterise each of the various habitat patches. The tree, shrub and herb species were identified, and the vertical strata to which they belonged were noted. Regardless of taxonomic and functional identity, plants of height ***≤*** 1 m above the ground belonged to the ‘Herb’ layer (this therefore included both woody- [like *Rubus*] and non-woody stemmed [like graminoids] plants, and did not exclude graminoid leaves that extended beyond 1 m from the ground); plants 1--4 m in height belonged to the ‘Understorey’ (this included shrubs like *S. aucuparia* and *F. alnus* as well as young individuals of trees like *P. abies*); and plants ***≥*** 4 m in height belonged to the ‘Canopy’ (this occasionally included *S. aucuparia*). 
+Vegetation features thought to be relevant to birds in the post-breeding period were selected and measured to initially characterise the various habitat patches. The habitat class of each sampling point was recorded as ‘Interior’, ‘Road’ or ‘Edge’ according to whether or not asphalt roads and forest-to-farmland transitions occurred within 150 m from the centre of the point. This was done using an aerial map (Mapy.cz) in which asphalt roads, farmlands and forests are all clearly visible and distinguishable. At each of the 32 points, the tree, shrub and herb species were identified, and the vertical strata to which they belonged were noted. The species information was used to calculate plant species richness and diversity (Shannon’s diversity index; Shannon, 1948). Regardless of taxonomic and functional identity, plants of height $\le$ 1 m above the ground classified into the ‘Herb’ layer (this therefore included both woody- [like *Rubus*] and non-woody stemmed [like graminoids] plants, but did not exclude graminoid leaves that extended beyond 1 m from the ground); plants 1--4 m in height belonged to the ‘Understorey’ (this included shrubs like *S. aucuparia* and *F. alnus* as well as young individuals of trees like *P. abies*); and plants $\ge$ 4 m in height belonged to the ‘Canopy’ (this occasionally included *S. aucuparia*). Counts of ‘Canopy’ and ‘Understorey’ plants were taken and used to calculate density per 100 m^2. Counts were not taken for the ‘Herb’ layer due to the difficulty in some cases in determining what constitutes a single stem and since it is unlikely that birds track ground layer vegetation at the level of individual stems. Instead, the species that covered $\gt$ 50% of the ground was considered to be the ‘Dominant Ground Vegetation’ (in some cases, this was moss) and this variable was also used in analyses. In addition, presence or absence of moss in the point was noted separately regardless of whether or not it was the dominant ground layer vegetation, as its presence usually indicates the quality of and disturbance within the forest patch (Berdugo et al., 2018; Cornelissen et al., 2007).
 
-The species information was also used to calculate plant species richness and diversity (Shannon’s diversity index; Shannon, 1948) in each of the points. Counts of ‘Canopy’ and ‘Understorey’ plants were taken and used to calculate density per 100 ***m2***. Counts were not taken for the ‘Herb’ layer due to the difficulty in some cases in determining what constitutes a single stem and since it is unlikely that birds track ground layer vegetation at the level of individual stems. Instead, the species that covered >50% of the ground was considered to be the ‘Dominant Ground Vegetation’ (in some cases, this was moss) and this variable was also used in analyses. In addition, presence or absence of moss in the point was noted separately regardless of whether or not it was the dominant ground layer vegetation, as its presence usually indicates the quality of and disturbance within the forest patch (see e.g., Berdugo et al., 2018; Cornelissen et al., 2007). The proportion deciduous tress in the 'Canopy' was calculated as this has been shown to be a more important factor than measures of tree diversity (Berg, 1997). Furthermore, the habitat class of each of the 32 points was recorded as ‘Interior’, ‘Road’ or ‘Edge’ according to whether or not asphalt roads and forest-to-farmland transitions occurred within 150 m from the centre of the point. This was done using an aerial map (Mapy.cz) in which asphalt roads, farmlands and forests are all clearly visible and distinguishable.
-
-Canopy cover at a sampling point was measured using canopy photographs taken at three equidistant sub-points within 10–15 m of the centre, which were then analysed using ImageJ software (Rasband, 1997) by converting to binary black-and-white images (see Forester, 2011) and calculating the percentage of cover across the whole image (see Figure S1). The measurements from each sub-point were averaged to represent mean canopy cover of a point, while the standard deviation of the three values represented the heterogeneity in canopy cover in the point (high values signifying high heterogeneity). Such measurements were taken once in each sampling week. Since most deciduous trees bore leaves even in the last week of sampling, the 13 weekly measurements of both mean canopy cover and canopy heterogeneity for each sampling point were averaged to provide more accurate measures of both. Lastly, phenological characteristics of leaves, flowers and fruits of the plants in each point were also recorded weekly on an ordinal scale in order to track fruiting, flowering and leaf senescence patterns across the study period. 
+We also calculated the proportion of deciduous tress in the 'Canopy' as this has been shown to be a more important factor than measures of tree diversity (Berg, 1997). Canopy cover at a sampling point was measured using canopy photographs taken at three equidistant sub-points within 10--15 m of the centre, which were then analysed using ImageJ software (Rasband, 1997) by converting to binary black-and-white images and calculating the percentage of cover across the whole image (see Forester, 2011; Figure S1). The measurements from each sub-point were averaged to represent mean canopy cover of a point, while the standard deviation of the three values represented the heterogeneity in canopy cover in the point (high values signifying high heterogeneity). These measurements were taken once in each sampling week. Since most deciduous trees bore leaves even in the last week of sampling, the 13 weekly measurements of both mean canopy cover and canopy heterogeneity for each sampling point were averaged to provide more accurate measures of both. Lastly, phenological characteristics of leaves, flowers and fruits of the plants in each point were also recorded weekly on an ordinal scale in order to track fruiting, flowering and leaf senescence patterns across the study period. 
 
 ***Table 1: The continuous measure of time (Week) used to test for patterns in habitat selection, with corresponding weeks (starting on Monday) in the Gregorian calendar.***
 
-
 ## Bird counts
 
-We surveyed bird abundance by means of fixed-radius point counts at each of the 32 sampling points every week for 13 weeks (8 July 2020--1 October 2020). Each point being located at least 250 m from its neighbours assured spatiotemporal independence of consecutive point counts. Sampling was done on 2--3 days in the middle of the week while the remaining days served to delineate and separate two successive ‘temporal units’. This enabled meaningful comparisons of bird abundances across weeks, as each would be sufficiently independent of the other and would thus represent a distinct time point (Table 1). 
+We surveyed bird abundance by means of fixed-radius point counts at each of the 32 sampling points every week for 13 weeks (8 July 2020--1 October 2020), thus covering the post-breeding period from late summer till early autumn at a fine-grained temporal resolution. Each point being located at least 250 m from its neighbours assured spatiotemporal independence of consecutive point counts. Sampling was done on 2--3 days in the middle of the calendar week while the remaining days served to delineate and separate two successive ‘temporal units’. This enabled meaningful comparisons of bird abundances across weeks, as each would be sufficiently independent of the other and would thus represent a distinct time point (Table 1). 
 
-We conducted 12--20 bird counts per sampling day, during the first five hours after sunrise (which shifted forward by around 10 minutes every week). Overcast and rainy days were avoided. We recorded the presence and counts of all birds heard or seen at each point, during a period of 20 minutes divided into four intervals of five minutes each. Additionally, complementary information for each detection, like type of detection (visual, auditory or both), behaviour such as flyover (over the forest, within the forest canopy or not flying) or foraging (yes or no), and distance class were noted. Distance classes referred to five radial bins from the centre of the point: 0--10 m, 10--20 m, 20--30 m, 30--50 m and >50 m. Additionally, birds were observed for whether or not they entered the 30 m radius (i.e., entered the point) at any time during the count, as this would signify the bird’s ‘use’ of the habitat. All birds were identified to species level when possible, but some closely related cryptics such as Phylloscopus spp., Certhia spp., Regulus spp. and Dendrocopos spp. are easy to confuse and difficult to identify correctly with just the occasional post-breeding vocalisations, and hence were often recorded as ‘spuhs’.
+We conducted 12--20 bird counts per sampling day, during the first five hours after sunrise (which shifted forward by around 10 minutes every week). Overcast and rainy days were avoided. We recorded the presence and counts of all birds heard or seen during a period of 20 minutes, divided into four intervals of five minutes each. Additionally, complementary information for each detection, like type of detection (visual, auditory or both), behaviour such as flyover (over the forest, within the forest canopy or not flying) or foraging (yes or no), and distance class were noted. Distance classes referred to five radial bins from the centre of the point: 0--10 m, 10--20 m, 20--30 m, 30--50 m and $\gt$ 50 m. Additionally, birds were observed for whether or not they entered the 30 m radius (i.e., entered the sampling point) at any time during the count, signifying the bird’s ‘use’ of the habitat. All birds were identified to species level when possible, but some closely related cryptics such as *Phylloscopus* spp., *Certhia* spp., *Regulus* spp. and *Dendrocopos* spp. are easy to confuse and difficult to identify correctly with just the occasional post-breeding vocalisations, and hence were often recorded as ‘spuhs’.
 
-Prior to analysis, bird species were classified based on feeding guild as well as migration strategy. Feeding guild was determined using data from an extensive network of European ornithologists (Gregory et al., 2007, pt. Appendix 1) complemented with species descriptions from Birds of the World (Billerman et al., 2020). Migration strategy was assigned following Czech ornithological data; species of which >75% of the Czech breeding population migrates either short or long distances (categories 3 and 4 in Cepák et al., 2008) were considered as complete migrants for the purposes of this study; those species which have ‘regular and abundant wintertime occurrence in the Czech Republic’ were considered partial migrants (category 2 in Cepák et al., 2008; see also Št’astnỳ and Hudec, 2011); and the residents of category 1 (Cepák et al., 2008) were considered true residents. 
-
+Prior to analysis, bird species were classified based on feeding guild as well as migration strategy. Feeding guild was determined using data from an extensive network of European ornithologists (Gregory et al., 2007, pt. Appendix 1) complemented with species descriptions from Birds of the World (Billerman et al., 2020). Migration strategy was assigned following Czech ornithological data; species of which $\gt$ 75% of the Czech breeding population migrates either short or long distances (categories 3 and 4 in Cepák et al., 2008) were considered as complete migrants for the purposes of this study; those with ‘regular and abundant wintertime occurrence in the Czech Republic’ were considered partial migrants (category 2 in Cepák et al., 2008; see also Št’astnỳ and Hudec, 2011); and the residents of category 1 (Cepák et al., 2008) were considered true residents. 
 
 ## Data analysis
 
-To assess patterns of habitat selection by birds, we excluded birds not identified to genus level, those detected flying over the forest and those that did not enter the 30 m radius in point counts. Analyses were conducted at three main levels of response, using generalised linear mixed models (GLMM). The measured habitat variables without the ones excluded due to correlations represented the pool of candidate predictors. This set of plausible predictors was then used to build models using an information-theoretic approach (Burnham and Anderson, 1998), viz., the Akaike Information Criterion (Akaike, 1973, 1974), and more specifically, the corrected AIC (AICC; Hurvich and Tsai, 1989). 
+To assess patterns of habitat selection by birds, we excluded birds not identified to genus level, those detected flying over the forest and those that did not enter the 30 m radius in point counts. The measured habitat variables without the ones excluded due to correlations represented the pool of candidate predictors. This set of plausible predictors was then used to build generalised linear mixed models (GLMM) following an information-theoretic approach (Burnham and Anderson, 1998). That is, the Akaike Information Criterion (Akaike, 1973, 1974), and more specifically the corrected AIC (AIC~C~; Hurvich and Tsai, 1989), was used to judge model fit. 
 
-First, we looked for patterns of habitat selection at the highest level of all bird species, by summing all the individual species abundances per point count to obtain one abundance value for each count. This ‘bird abundance’ was then used as the response variable in the models. GLMMs were constructed using the lme4 package (Bates et al., 2015), starting with a null model and building up from it. The null model included observer as a fixed effect and sampling points and days as crossed random effects. The residuals were modelled as coming from a Poisson distribution with a log link function. Point ID was used a random effect because of repeated sampling in the same points over the 13 weeks, and sampling day was used as a random effect to account for the random variability in each unique day. 
+Analyses were conducted at two main levels of response. At the highest level, we looked for patterns of habitat selection in the whole bird community, by summing all the individual species abundances per point count to obtain one 'bird abundance' value for each count, which was then used as the response variable. GLMMs using the BOBYQA optimiser were constructed using the *lme4* package (Bates et al., 2015), starting from a null model containing observer as a fixed effect and sampling points and days as crossed random effects, then building up. Point ID was used a random effect because of repeated sampling in the same points over the 13 weeks, and sampling day in order to account for the random variability in each unique day. Residuals were modelled as coming from a Poisson distribution with a log link function. Next, the week variable which had a visible effect (abundances were higher towards the end of the study period; noticed even during the bird counts), and other non-focal variables such as weather, visibility and time of count (on an ordinal scale from 1 to 10 representing which part of the first five hours of sunrise the count was done in) were added. Following this, finally the focal variables were added. These included habitat class, presence of moss, log-transformed variables of canopy heterogeneity and tree density and square root-transformed understorey density, scaled proportion of deciduous trees, tree species diversity and richness, and dominant herb. Understorey richness and diversity were not tested because the study area had insufficient diversity and moreover, it was unlikely that birds would track, for instance, spruce saplings (which indeed belonged to the ‘Understorey’). Instead, understorey density was thought to be a meaningful and more important predictor. For continuous or ordinal variables, both linear and polynomial terms were tested since there was no reason to assume a linear relationship with the predictors. At each step of variable addition, AIC~C~ values of all the models were compared using the AICctab() function from the *bbmle* package (Bolker et al., 2020). If the addition of a variable did not result in a substantial decrease of AIC~C~ respective to the number of degrees of freedom it used (following the rule of thumb of 2 dAIC~C~ per df), it was discarded, and otherwise it was deemed important and retained in the model. In the latter case, its interaction with ‘Week’ was next tested (i.e., whether or not habitat selection criteria changed with the progress of the season). Such a stepwise procedure was repeated until the final model was obtained. Model diagnostics of all models were explored using the *DHARMa* package (Hartig, 2020) for distributional assumptions, heteroscedasticity, over-/underdispersion and zero-inflation. Once the selection was complete, parsimony was further tested by dropping some complex interaction terms. Finally, the most parsimonious model was selected. 
 
-Next, the week variable, which clearly had a strong effect (abundances were higher towards the end of the study period; noticed even during the bird counts), followed by other non-focal (‘nuisance’) variables such as weather, visibility and time of count (on an ordinal scale from 1 to 10 representing which part of the first five hours of sunrise the count was done in) were added to the null models and comparisons were made of AICC values of all the models using the AICctab() function from the bbmle package (Bolker et al., 2020). If the addition of a variable did not result in a substantial decrease of AICC respective to the number of degrees of freedom it used (following the rule of thumb of 2 dAICC per df), it was discarded, and otherwise it was retained in the model. Finally, focal variables were tested including habitat class, presence of moss, log-transformed variables of canopy heterogeneity and tree density and square root-transformed understorey density (transformations done to prevent outliers from gaining too much leverage), scaled proportion of deciduous trees, tree species diversity and richness, and dominant herb. Understorey richness and diversity were not tested because the sampling points did not have sufficient diversity in understorey species and moreover, it was unlikely that birds would track, for instance, spruce saplings (which indeed belonged to my ‘Understorey’ classification). Instead, understorey density was thought to be a meaningful and more important predictor. For continuous or ordinal variables, both linear and polynomial terms were tested since there was no reason to assume a linear relationship with the predictors. If a variable was found to be important, its interaction with ‘Week’ was next tested (i.e., whether or not certain habitat selection criteria changed with the progress of the season). 
-
-Such a stepwise procedure was repeated until the final model was obtained. Model diagnostics of all models were explored using the DHARMa package (Hartig, 2020) for distributional assumptions, heteroscedasticity, over-/underdispersion and zero-inflation. Since the model with the default optimiser was facing convergence problems, the BOBYQA optimiser was used which resolved the issue. Once the selection was complete, parsimony was further tested by dropping some complex interaction terms. Finally, the most parsimonious model was obtained. 
-
-The next level of response investigated was the guild level. The original bird observations were summarised by guild so as to obtain for each point abundance values of all the guilds that were observed. Only two guilds had high number of overall detections, insectivores (rather, invertebrate-feeders) and omnivores. Models were built separately for these two guilds. Using the lme4 package resulted in several errors and warnings regarding convergence and singular fits, but the same model specifications using the glmmTMB package (Brooks et al., 2017) did not, and hence the latter was used in further steps. The data summarised at guild level was insufficient for the proper utilisation of two crossed random effects (as was done in the first model), so the random effect of day, which had less estimated variance than that of the point, was excluded from the models. This did not result in major differences in the fixed effects estimates so was not considered to be an issue. Model building and checking of model diagnostics was done in the same way as in the first case. 
-
-Thirdly, to explore whether patterns differed between migrant and non-migrant species, the bird data was summarised by migration strategy and attempts were made to build GLMMs using the glmmTMB package. However, while a good fitting model was obtained for non-migrants (which had the highest number of overall detections), data for the other two categories seemed to be unsuitable and insufficient. The data showed significant one-inflation when tested (using functions in the DHARMa package) relative to both Poisson and negative binomial distributions, i.e., the number of ‘1’ count observations was too high for a standard Poisson or a standard negative binomial. This one-inflation in turn also caused underdispersion, which was removed neither on switching to distributions suited to underdispersed data (such as the Generalised Poisson and Conway-Maxwell Poisson), nor on introducing a zero-inflation term. The same problem occurred during attempts to build models at the species-level, i.e., looking at patterns of habitat selection for certain selected species (incidentally, the ones with most overall detections). The results of these questions were expected to be interesting, but as the data didn’t seem much suited to a binomial distribution either, this approach was abandoned for lack of better data. Finally, separate models were built to test whether bird abundances were linked to the phenology of the fruiting plants Rubus sp., Vaccinium sp., F. alnus and S. aucuparia but there was no detectable relationship. 
-
-All analyses were done using R version ***4.0.2 (R Core Team, 2020)***. Individual figures with multiple graphs were composed using the *patchwork* package for R (Pedersen, 2020).
-
+At the next level of response, we investigated whether foraging guilds differed in their habitat selection patterns. The original bird observations were summarised by guild so as to obtain for each point abundance values of all the guilds that were observed. Only two guilds had sufficiently high number of overall detections, insectivores (rather, 'invertebrate-feeders') and omnivores. Models were built separately for these two guilds, using the *glmmTMB* package (Brooks et al., 2017)  to avoid convergence issues. The data summarised at guild level was insufficient for utilisation of two crossed random effects (as was done in the first model), so the random effect of day, which had less estimated variance than that of the point, was excluded from the models. This did not result in major differences in the fixed effects estimates and so was not considered to be an issue. Model building and checking of model diagnostics was done in the same way as in the first case. All analyses were done using R version ***4.1.2 (R Core Team, 2021)***. Individual figures with multiple graphs were composed using the *patchwork* package for R (Pedersen, 2020).
 
 # Results
 
@@ -145,6 +124,8 @@ Figure 5: Abundance of omnivorous birds varying with habitat characteristics of 
 
 
  Alatalo (1981) found evidence for the prevalence of interspecific competition in the seasonal environment of Finland
+
+Thirdly, to explore whether patterns differed between migrant and non-migrant species, the bird data was summarised by migration strategy and attempts were made to build GLMMs using the glmmTMB package. However, while a good fitting model was obtained for non-migrants (which had the highest number of overall detections), data for the other two categories seemed to be unsuitable and insufficient. The data showed significant one-inflation when tested (using functions in the DHARMa package) relative to both Poisson and negative binomial distributions, i.e., the number of ‘1’ count observations was too high for a standard Poisson or a standard negative binomial. This one-inflation in turn also caused underdispersion, which was removed neither on switching to distributions suited to underdispersed data (such as the Generalised Poisson and Conway-Maxwell Poisson), nor on introducing a zero-inflation term. The same problem occurred during attempts to build models at the species-level, i.e., looking at patterns of habitat selection for certain selected species (incidentally, the ones with most overall detections). The results of these questions were expected to be interesting, but as the data didn’t seem much suited to a binomial distribution either, this approach was abandoned for lack of better data. Finally, separate models were built to test whether bird abundances were linked to the phenology of the fruiting plants Rubus sp., Vaccinium sp., F. alnus and S. aucuparia but there was no detectable relationship. 
 
 
 
