--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -51,7 +51,7 @@ We also calculated the proportion of deciduous tress in the 'Canopy' as this has
 
 ## Bird counts
 
-We surveyed bird abundance by means of fixed-radius point counts at each of the 32 sampling points every week for 13 weeks (8 July 2020--1 October 2020), thus covering the post-breeding period from late summer till early autumn at a fine-grained temporal resolution. Each point being located at least 250 m from its neighbours assured spatiotemporal independence of consecutive point counts. Sampling was done on 2--3 days in the middle of the calendar week while the remaining days served to delineate and separate two successive ‘temporal units’. This enabled meaningful comparisons of bird abundances across weeks, as each would be sufficiently independent of the other and would thus represent a distinct time point (Table 1). 
+We surveyed bird 'abundance' by means of fixed-radius point counts, using detections as a proxy for abundance. While detections are not an accurate measure of true abundance, with many vegetation characteristics and behavioural traits affecting detectability of birds, it was sufficient for our purposes since we were not interested in estimating true population size, and the sampling points did not vary highly in terms of vegetation characteristics hindering detectability or detectability of different bird communities (rather, most birds have similarly low levels of vocal activity in the post-breeding period). Point counts were done at each of the 32 sampling points every week for 13 weeks (8 July 2020--1 October 2020), thus covering the post-breeding period from late summer till early autumn at a fine-grained temporal resolution. Each point being located at least 250 m from its neighbours assured spatiotemporal independence of consecutive point counts. Sampling was done on 2--3 days in the middle of the calendar week while the remaining days served to delineate and separate two successive ‘temporal units’. This enabled meaningful comparisons of bird abundances across weeks, as each would be sufficiently independent of the other and would thus represent a distinct time point (Table 1). 
 
 We conducted 12--20 bird counts per sampling day, during the first five hours after sunrise (which shifted forward by around 10 minutes every week). Overcast and rainy days were avoided. We recorded the presence and counts of all birds heard or seen during a period of 20 minutes, divided into four intervals of five minutes each. Additionally, complementary information for each detection, like type of detection (visual, auditory or both), behaviour such as flyover (over the forest, within the forest canopy or not flying) or foraging (yes or no), and distance class were noted. Distance classes referred to five radial bins from the centre of the point: 0--10 m, 10--20 m, 20--30 m, 30--50 m and $\gt$ 50 m. Additionally, birds were observed for whether or not they entered the 30 m radius (i.e., entered the sampling point) at any time during the count, signifying the bird’s ‘use’ of the habitat. All birds were identified to species level when possible, but some closely related cryptics such as *Phylloscopus* spp., *Certhia* spp., *Regulus* spp. and *Dendrocopos* spp. are easy to confuse and difficult to identify correctly with just the occasional post-breeding vocalisations, and hence were often recorded as ‘spuhs’.
 
@@ -61,66 +61,41 @@ Prior to analysis, bird species were classified based on feeding guild as well a
 
 To assess patterns of habitat selection by birds, we excluded birds not identified to genus level, those detected flying over the forest and those that did not enter the 30 m radius in point counts. The measured habitat variables without the ones excluded due to correlations represented the pool of candidate predictors. This set of plausible predictors was then used to build generalised linear mixed models (GLMM) following an information-theoretic approach (Burnham and Anderson, 1998). That is, the Akaike Information Criterion (Akaike, 1973, 1974), and more specifically the corrected AIC (AIC~C~; Hurvich and Tsai, 1989), was used to judge model fit. 
 
-Analyses were conducted at two main levels of response. At the highest level, we looked for patterns of habitat selection in the whole bird community, by summing all the individual species abundances per point count to obtain one 'bird abundance' value for each count, which was then used as the response variable. GLMMs using the BOBYQA optimiser were constructed using the *lme4* package (Bates et al., 2015), starting from a null model containing observer as a fixed effect and sampling points and days as crossed random effects, then building up. Point ID was used a random effect because of repeated sampling in the same points over the 13 weeks, and sampling day in order to account for the random variability in each unique day. Residuals were modelled as coming from a Poisson distribution with a log link function. Next, the week variable which had a visible effect (abundances were higher towards the end of the study period; noticed even during the bird counts), and other non-focal variables such as weather, visibility and time of count (on an ordinal scale from 1 to 10 representing which part of the first five hours of sunrise the count was done in) were added. Following this, finally the focal variables were added. These included habitat class, presence of moss, log-transformed variables of canopy heterogeneity and tree density and square root-transformed understorey density, scaled proportion of deciduous trees, tree species diversity and richness, and dominant herb. Understorey richness and diversity were not tested because the study area had insufficient diversity and moreover, it was unlikely that birds would track, for instance, spruce saplings (which indeed belonged to the ‘Understorey’). Instead, understorey density was thought to be a meaningful and more important predictor. For continuous or ordinal variables, both linear and polynomial terms were tested since there was no reason to assume a linear relationship with the predictors. At each step of variable addition, AIC~C~ values of all the models were compared using the AICctab() function from the *bbmle* package (Bolker et al., 2020). If the addition of a variable did not result in a substantial decrease of AIC~C~ respective to the number of degrees of freedom it used (following the rule of thumb of 2 dAIC~C~ per df), it was discarded, and otherwise it was deemed important and retained in the model. In the latter case, its interaction with ‘Week’ was next tested (i.e., whether or not habitat selection criteria changed with the progress of the season). Such a stepwise procedure was repeated until the final model was obtained. Model diagnostics of all models were explored using the *DHARMa* package (Hartig, 2020) for distributional assumptions, heteroscedasticity, over-/underdispersion and zero-inflation. Once the selection was complete, parsimony was further tested by dropping some complex interaction terms. Finally, the most parsimonious model was selected. 
+Analyses were conducted at two main levels of response. At the highest level, we looked for patterns of habitat selection in the whole bird community, by summing all the individual species detections per point count to obtain one 'bird abundance' value for each count, which was then used as the response variable. GLMMs were constructed using the *lme4* package (Bates et al., 2015), starting from a null model containing observer as a fixed effect and sampling points and days as crossed random effects, then building up. Point ID was used a random effect because of repeated sampling in the same points over the 13 weeks, and sampling day in order to account for the random variability in each unique day. Residuals were modelled as coming from a Poisson distribution with a log link function. Next, the week variable which had a visible effect (abundances were higher towards the end of the study period; noticed even during the bird counts), and other non-focal variables such as weather, visibility and time of count (on an ordinal scale from 1 to 10 representing which part of the first five hours of sunrise the count was done in) were added. Following this, finally the focal variables were added. For continuous or ordinal variables, both linear and polynomial terms were tested since there was no reason to assume a linear relationship with the predictors. Stepwise selection was done by comparing AIC~C~ values of all the models using the AICctab() function from the *bbmle* package (Bolker et al., 2020), with an information threshold of 2 dAIC~C~ per df. If a variable was deemed important, its interaction with ‘Week’ was next tested (i.e., whether or not habitat selection criteria changed with the progress of the season). Model diagnostics of all models were explored using the *DHARMa* package (Hartig, 2020) for distributional assumptions, heteroscedasticity, over-/underdispersion and zero-inflation. Once the selection was complete, parsimony was further tested by dropping some complex interaction terms. Finally, the most parsimonious model was selected. 
 
 At the next level of response, we investigated whether foraging guilds differed in their habitat selection patterns. The original bird observations were summarised by guild so as to obtain for each point abundance values of all the guilds that were observed. Only two guilds had sufficiently high number of overall detections, insectivores (rather, 'invertebrate-feeders') and omnivores. Models were built separately for these two guilds, using the *glmmTMB* package (Brooks et al., 2017)  to avoid convergence issues. The data summarised at guild level was insufficient for utilisation of two crossed random effects (as was done in the first model), so the random effect of day, which had less estimated variance than that of the point, was excluded from the models. This did not result in major differences in the fixed effects estimates and so was not considered to be an issue. Model building and checking of model diagnostics was done in the same way as in the first case. All analyses were done using R version ***4.1.2 (R Core Team, 2021)***. Individual figures with multiple graphs were composed using the *patchwork* package for R (Pedersen, 2020). 
 
 # Results
 
-In total, over the course of 13 weeks and across all points, 7,367 bird detections of 69 species were made, but 62% of the detections were of birds that did not enter the 30 m radius, or were flyovers above the forest canopy or were unidentified to genus level. Hence, the data considered and analysed in the present study comprised 2,840 detections of 45 species. The average number of birds detected per point count varied from 5 in Week 1 to 9 in Week 13 (Figure 2). Of the 2,840 detections, 78% (2,209) were purely auditory, 7% (201) were purely visual and 15% (430) were both, and this did not change majorly with weeks or across points (Figure S3).
-
-There were 494 records of birds foraging, although just 2 of them were of birds feeding on fruits. Even in the full unrestricted dataset, there are records of just 14 birds feeding on fruits, and half of these birds were from a single observation. The fruiting plant species most birds fed on was rowan *S. aucuparia* although one record was of a blackbird *Turdus merula* feeding on *Rubus* sp. Most of the birds feeding on fruits were thrushes, but one instance was of a Eurasian blackcap *Sylvia atricapilla* and another of two Eurasian jays *Garrulus glandiarus*. Although this data is very limited and cannot be used in further analyses, the tiny proportion of frugivory among all foraging observations is noteworthy.
-
-In the full dataset, KT observed 54.24% of the total detections (3,996/7,367) and IF observed 45.76% (3,371/7,367), while in the restricted data analysed in this study, KT observed 70.63% (2,006/2,840) and IF observed 29.37% (834/2,840) (Figure S4 and Figure S5). Clearly, the overall detection rates are not considerably different between the observers but the discrepancy in the restricted dataset was most likely caused due to errors in distance estimation in the field (in excluding the birds that did not come within 30 m of the centre). Specifically, either KT underestimated the distances at which detections were made (thereby including more birds as having come within 30 m) or IF overestimated them (thereby including less birds as having come within 30 m), or both. This contributes majorly to the observer effect in the later models. Nevertheless, only the restricted data is considered hereinafter.
+A total of 7,367 detections of 69 bird species were made, of which 62% (4527) did not meet the criteria for inclusion in the analysis. Of the 2,840 detections of 45 species anlaysed, 78% (2,209) were purely auditory, 7% (201) were purely visual and 15% (430) were both, and this did not change majorly with weeks or across points (Figure S3). The average number of detections per point count varied from 5 in Week 1 to 9 in Week 13 (Figure 2). Among 494 records of birds foraging, just two were of frugivory. 
  
 ***Figure 2: The trends in bird detections per point count with season and habitat. (A) Large circular dots represent mean bird detections per point count for each week averaged over all sampling points. Whiskers represent 95% confidence intervals (CIs). (B) Thick horizontal bars within boxes represent median value of bird detections per point count for each point over all sampling weeks. Top and bottom box hinges are the 1st and 3rd quartiles respectively (25th and 75th percentiles). Respective whisker ends are distances to data points ≤ 1.5 × IQR (interquartile range) from respective hinges. Small circular dots are data points ≥ 1.5 × IQR from hinges (outliers).***
 
-
 ## Habitat selection in forest birds
 
-The final model was a GLMM with Poisson error distribution (and log link) fitted with the BOBYQA optimiser (Table 2). It contained the total bird abundance as the response, and crossed random effects of sampling point and day. The predictors selected as important were observer, week, canopy heterogeneity, tree density, dominant ground vegetation and its interaction with week. 
+The final model was a GLMM with Poisson error distribution and log link function fitted with the BOBYQA optimiser (Table 2). It contained total bird abundance as response, and crossed random effects of sampling point and day. The predictors selected as important were observer (detections had 71:29 observer ratio), week, canopy heterogeneity, tree density, and dominant ground vegetation and its interaction with week. 
 
 ***Table 2: GLMMs using abundance of all birds as the response. Models at each step of term addition/deletion are shown (as ‘all.x’) with their corresponding information such as degrees of freedom (df), predictor terms, log-likelihood, AICC (which was used as a selection criterion) and Akaike weight. ‘CH’: canopy heterogeneity; ‘TD’: tree density; ‘DOM’: dominant ground vegetation. Selected model, ‘all.6’: bird abundance ~ observer + (1|point) + (1|day) + week + log(canopy heterogeneity) + log(tree density) + ground vegetation + week:(ground vegetation)***
 
-There was an overall increase in bird abundance towards the end of the study period. Otherwise, abundance showed positive and negative trends with log-transformed variables of canopy heterogeneity and tree density respectively (Figure 3). These trends did not change detectably over the course of the study period. 
-
-Here, it is worth noting that in the process of selection of candidate habitat variables, canopy heterogeneity correlated negatively with canopy cover at a significant level (r = -0.533, p = 0.0017). However, the relation was stronger at high values of canopy cover and weaker at low values, which is a direct physical result—with higher average cover, the potential variability in cover is lower. Additionally, tree density correlated significantly with canopy cover, albeit in the opposite direction (r = 0.526, p = 0.002). In spite of these two correlations, heterogeneity and tree density remained uncorrelated (r = -0.246, p = 0.1745). Further, tree density also correlated negatively with proportion of deciduous trees at a significant level (r = -0.545, p = 0.0013), but seemed to be the more important predictor in the models.
-
-The relationship between abundance and dominant ground vegetation showed interesting patterns with time. While all points---across the five categories of ground vegetation---showed an increase in bird abundance as the season progressed, the degree to which it increased was starkly different in each. Points with *Rubus* sp. and those with *Vaccinium* sp. as the dominant ground vegetation were similar in terms of both average abundance and the increase in abundance with time; both were intermediate values. Points with graminoids in the ground layer had the lowest overall abundance as well as the lowest increase (Figure 3). Points with moss as the ground layer and those which had no dominant ground layer vegetation (category ‘Bare’) showed similar patterns---both had low abundances in the beginning but towards the end had the highest abundances. They showed the strongest increases in abundance. 
+There was an overall increase in bird abundance towards the end of the study period in all sampling points---across the five categories of ground vegetation---but the magnitude of increase was starkly different in each. Points with *Rubus* sp. and those with *Vaccinium* sp. as the dominant ground vegetation had intermediate values of both average abundance and increase in abundance with time. Points with graminoids in the ground layer had the lowest overall abundance as well as the lowest increase (Figure 3). Points with ground layers comprising moss and bare ground (category ‘Bare’) both had low abundances in the beginning but towards the end had the highest abundances, i.e., they showed the strongest increases. Bird abundance related positively and negatively with log-transformed variables of canopy heterogeneity and tree density respectively (Figure 3) and these trends did not change noticeably over the course of the study period. 
 
 ***Figure 3: Abundance of all species of birds varying with habitat characteristics of each sampling point, as predicted by the best-fitting model ‘all.6’. (A) Coloured lines show mean abundances changing with weeks on X-axis. Coloured ribbons around the lines represent 95% CIs. (B) Large circular dots represent mean bird abundance per point count. Whiskers represent 95% CIs. Dark orange colour represents Week 1 and dark blue represents Week 13. (C, D) Coloured lines show mean abundances and corresponding ribbons represent 95% CIs. Dark orange colour represents Week 1 and dark blue represents Week 13.***
 
-
 ## Habitat selection in forest bird guilds
 
-In terms of the selected models, habitat selection in invertebrate-feeders and in omnivores were very different (Table 3). The former was a Poisson GLMM (log link) with observer, proportion of deciduous trees and dominant ground vegetation as important fixed effects, while there was no main effect or interaction term of week. Point ID was included as a random effect. Although the dominant ground vegetation was a useful predictor, the only deviant group was ‘Graminoids’; points which had graminoids as the dominant ground layer vegetation tended to have lower abundance of invertebrate-feeding birds than points with other ground layers (Figure 4). Abundance decreased with proportion of deciduous trees, and notably, a polynomial term did not give a better fit, although mixed forests with intermediate proportions of deciduous trees are believed to have higher diversity and abundance. Neither of the two trends changed detectably with time.
+Habitat selection was very different in invertebrate-feeders and in omnivores (Table 3). The final model in the former case was a Poisson GLMM (log link) with observer, proportion of deciduous trees and dominant ground vegetation as important fixed effects, with no main effect or interaction term of week. Point ID was included as a random effect. Although the dominant ground vegetation was a useful predictor, the only deviant group was ‘Graminoids’; such sampling points tended to have lower abundance of invertebrate-feeding birds than points with other ground layers (Figure 4). Abundance decreased with proportion of deciduous trees and notably, a polynomial term did not give a better fit, although mixed forests with intermediate proportions of deciduous trees are believed to have higher diversity and abundance. Neither of the two trends changed detectably with time.
 
-For omnivores, the final model was a negative binomial GLMM (log link) also containing just one random effect, of point. Observer, week, habitat class, tree density and canopy heterogeneity along with its interaction with week were all important and contributed to model parsimony. Omnivore abundance also increased as the season progressed, but overall abundance was higher in forest edges than in forest interiors or roadside patches (Figure 5). This trend did not interact with week. Omnivore abundance, similar to general bird abundance, decreased with tree density but showed interesting trends with canopy heterogeneity. At first, the trend appeared to be slightly negative yet almost insignificant, but with every week the trend became more and more positive, such that in week 13 it was very strong. Omnivores seemed to be highly abundant in points with the most heterogeneity, while abundances in points with the lowest heterogeneity remained the same as in week 1 (Figure 5). 
+For omnivores, the final model was a negative binomial GLMM (log link) also containing just one random effect, of point. Observer, week, habitat class, tree density and canopy heterogeneity along with its interaction with week were all important and contributed to model parsimony. Omnivore abundance also increased as the season progressed, but overall abundance was higher in forest edges than in forest interiors or roadside patches (Figure 5). This trend did not interact with week. Omnivore abundance decreased with tree density but showed interesting trends with canopy heterogeneity. Initially, the trend appeared to be slightly negative yet almost insignificant, but with every week the trend became more and more positive, such that in week 13 it was very strong: omnivores seemed to be very abundant in highly heterogenous points, while abundances did not change over the weeks in relatively homogenous points (Figure 5). 
 
-
-Table 3: GLMMs of guild abundances with habitat variables. Model names ‘inv.x’ refer to invertebrate-feeder models while names ‘omn.x’ refer to omnivore models. Models at each step of term addition/deletion are shown with their corresponding information such as degrees of freedom (df), predictor terms, log-likelihood, AICC (which was used as a selection criterion) and Akaike weight. ‘sTPD’: scaled proportion of deciduous trees; ‘DOM’: dominant ground vegetation; ‘HC’: habitat class; ‘CH’: canopy heterogeneity; ‘TD’: tree density.
-
-Model	df	Predictors	logLik	AICc	Weight
-inv.4	8	sTPD + DOM + observer + (1|point) 	-552.462	1,121.385	0.951
-inv.3	6	sTPD + TR + observer + (1|point) + moss 	-557.916	1,128.098	0.033
-inv.2	5	sTPD + observer + (1|point) + moss 	-559.998	1,130.186	0.012
-inv.1	4	observer + (1|point) + moss	-562.141	1,132.408	0.004
-omn.3	10	HC + log(CH) + log(TD) + week:log(CH) + observer + (1|point) + week	-880.043	1,780.678	0.981
-omn.2	7	HC + observer + (1|point) + week	-887.149	1,788.597	0.019
-omn.1	5	observer + (1|point) + week	-894.116	1,798.391	0.0001
-
-Selected model, ‘inv.4’:
-invertebrate-feeder abundance ~ observer + (1|point) + scaled proportion of deciduous trees + ground vegetation
-Selected model, ‘omn.3’:
-omnivore abundance ~ observer + (1|point) + week + habitat class + log(canopy heterogeneity) + log(tree density) + week:log(canopy heterogeneity)
-
+***Table 3: GLMMs of guild abundances with habitat variables. Model names ‘inv.x’ refer to invertebrate-feeder models while names ‘omn.x’ refer to omnivore models. Models at each step of term addition/deletion are shown with their corresponding information such as degrees of freedom (df), predictor terms, log-likelihood, AICC (which was used as a selection criterion) and Akaike weight. ‘sTPD’: scaled proportion of deciduous trees; ‘DOM’: dominant ground vegetation; ‘HC’: habitat class; ‘CH’: canopy heterogeneity; ‘TD’: tree density.***
  
-Figure 4: Abundance of invertebrate-feeding birds varying with habitat characteristics of each sampling point, as predicted by the best-fitting model ‘inv.4’. (A) Large circular dots represent mean abundance per point count. Whiskers represent 95% CIs. (B) Line shows mean abundances and corresponding ribbon represents 95% CIs. X-axis shows proportions scaled from original range of 0–100%.
+***Figure 4: Abundance of invertebrate-feeding birds varying with habitat characteristics of each sampling point, as predicted by the best-fitting model ‘inv.4’. (A) Large circular dots represent mean abundance per point count. Whiskers represent 95% CIs. (B) Line shows mean abundances and corresponding ribbon represents 95% CIs. X-axis shows proportions scaled from original range of 0–100%.***
  
-Figure 5: Abundance of omnivorous birds varying with habitat characteristics of each sampling point, as predicted by the best-fitting model ‘omn.3’. Dark orange colour represents Week 1, pink colour represents Week 7 and dark blue represents Week 13. (A) Large circular dots represent mean abundance per point count. Whiskers represent 95% confidence intervals. (B, C) Coloured lines show mean abundances and corresponding ribbons represent 95% CIs. 
-
+***Figure 5: Abundance of omnivorous birds varying with habitat characteristics of each sampling point, as predicted by the best-fitting model ‘omn.3’. Dark orange colour represents Week 1, pink colour represents Week 7 and dark blue represents Week 13. (A) Large circular dots represent mean abundance per point count. Whiskers represent 95% confidence intervals. (B, C) Coloured lines show mean abundances and corresponding ribbons represent 95% CIs.***
 
 # Discussion
+
+Here, it is worth noting that in the process of selection of candidate habitat variables, canopy heterogeneity correlated negatively with canopy cover at a significant level (r = -0.533, p = 0.0017). However, the relation was stronger at high values of canopy cover and weaker at low values, which is a direct physical result—with higher average cover, the potential variability in cover is lower. Additionally, tree density correlated significantly with canopy cover, albeit in the opposite direction (r = 0.526, p = 0.002). In spite of these two correlations, heterogeneity and tree density remained uncorrelated (r = -0.246, p = 0.1745). Further, tree density also correlated negatively with proportion of deciduous trees at a significant level (r = -0.545, p = 0.0013), but seemed to be the more important predictor in the models.
 
 
  Alatalo (1981) found evidence for the prevalence of interspecific competition in the seasonal environment of Finland
@@ -238,6 +213,8 @@ Habitat selection is a fundamental part of the ecology of organisms. Selection o
 There was a general increase in bird abundance caused by the arrival of northern migrants. In addition, I found varying degrees of habitat selection at different levels. Overall bird abundance was driven by a combination of structural characteristics and species composition of the vegetation. However, the two guilds showed different resource use strategies. Invertebrate-feeding birds only cared about one major characteristic, but were highly specific and consistent about it: they avoided oak-dominated homogeneous patches of forest and preferred spruce patches with heterogeneity. On the other hand, omnivores were affected by a larger interplay of factors and their patterns changed with time (with the arrival of migrants): they had a slight preference for forest edges with low densities of trees and this remained constant with time, but they formed an additional strong preference for highly heterogeneous areas as the season progressed. While there is no evidence to show that birds stopped feeding on arthropods, there was a marked decline in predation rates on the artificial caterpillars, which can be assumed to imperfectly mirror patterns of decline in predation of true lepidopteran prey. However, the trend seemed to be rising back up towards the end of the study, which provides a very interesting point for further inquiry.
 
 Thus, the poorly-studied topic of habitat selection in post-breeding temperate forest birds and their corresponding foraging strategies is a very promising avenue to lead future research down. It can lead to valuable insights on the interactions of these birds with their natural environment during stressful periods, and can possibly suggest recommendations on the right action to take in order to make and maintain these heavily managed and exploited habitats suitable to them.
+
+
 
 # Bibliography
 
